@@ -95,11 +95,11 @@ bool factory::finalize_object_(registry& reg, region& object, const region_core_
 
 void factory::apply_inheritance_(region& object, const region_core_attributes& attr) {
     for (const auto& base : attr.inheritance) {
-        if (!object.is_object_type(base->get_object_type())) {
+        if (!object.is_region_type(base->get_region_type())) {
             gui::out << gui::warning << "gui::factory: "
-                     << "\"" << object.get_name() << "\" (" << object.get_object_type()
+                     << "\"" << object.get_name() << "\" (" << object.get_region_type()
                      << ") cannot inherit from \"" << base->get_name() << "\" ("
-                     << base->get_object_type() << "). Inheritance skipped." << std::endl;
+                     << base->get_region_type() << "). Inheritance skipped." << std::endl;
             continue;
         }
 
